--- a/src/main/resources/com/example/finalxcmeettracker/splash-screen.fxml
+++ b/src/main/resources/com/example/finalxcmeettracker/splash-screen.fxml
@@ -6,11 +6,11 @@
 
 <?import javafx.scene.control.Button?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.finalxcmeettracker.HelloController">
+      fx:controller="com.example.finalxcmeettracker.SplashController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <Label fx:id="welcomeText" text="Welcome to the XC Meet Tracker!"/>
+    <Button fx:id="startMeetButton" text="Start Meet" onAction="#onStartMeetButtonClick"/>
 </VBox>
