Standardized layout to work with a single application, Main. Also added timer functionality to start a timer and display the current time in a label. I also added a button to stop the meet, but it cannot be restarted.

--- a/src/main/resources/com/example/finalxcmeettracker/meet-screen.fxml
+++ b/src/main/resources/com/example/finalxcmeettracker/meet-screen.fxml
@@ -11,6 +11,7 @@
     </padding>
 
     <Label text="Nothing has been changed yet." fx:id="currentTimeLabel"/>
-    <Button text="Goodbye" fx:id="goodbyeButton" onAction="#onGoodbyeButtonClick"/>
+    <Button text="Return" fx:id="returnButton" onAction="#onReturnButtonClick"/>
     <Button text="Begin Meet" fx:id="beginMeetButton" onAction="#onBeginMeetButtonClick"/>
+    <Button text="Stop Meet" fx:id="stopMeetButton" onAction="#onStopMeetButtonClick"/>
 </VBox>
