--- a/src/main/resources/com/example/finalxcmeettracker/meet-screen.fxml
+++ b/src/main/resources/com/example/finalxcmeettracker/meet-screen.fxml
@@ -10,8 +10,14 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
 
+    <ScrollPane fx:id="boxesQueue" prefHeight="200.0" prefWidth="200.0">
+        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0"/>
+    </ScrollPane>
+
+    <Button text="Add Time." fx:id="addTimeButton" onAction="#onAddTimeButtonClick" visible="false"/>
     <Label text="Nothing has been changed yet." fx:id="currentTimeLabel"/>
     <Button text="Return" fx:id="returnButton" onAction="#onReturnButtonClick"/>
     <Button text="Begin Meet" fx:id="beginMeetButton" onAction="#onBeginMeetButtonClick"/>
     <Button text="Stop Meet" fx:id="stopMeetButton" onAction="#onStopMeetButtonClick"/>
+    <Button text="Enter Meet Information" fx:id="enterMeetInformationButton" onAction="#onEnterMeetInformationButtonClick"/>
 </VBox>
